  o Shape of curved edges can now be controlled with 'curveShape' and 'curvePivotShape'.
  o The start of edges is now also reset to the edge of nodes if the destination of the edge is also reset. This will cause that bidirectional edges now look the same as directed edges.
  o Fixed a bug where graphs with a single edge were unable to pot edge labels.


Changes in Version 1.2
  o NEW MAJOR FEATURES:
    o Support added to include R plots as nodes. This can be done with the 'subplots' argument, which takes a list of R expressions that create a plot when evaluated. The 'subplot' function in the R package Hmisc is used to create the subplots.
    o Added the 'images' argument which can be used to plot png and jpeg files as node images.
    o Added knots, knot.size, knot.color, knot.borders, knot.border.color and knot.border.width arguments that allow tying edges together at their center.
	o igraph support added:
	  o the as.igraph function converts a qgraph object to an igraph object	
	  o igraph layout functions can now be assigned to the layout argument in qgraph(). The layout.par functon can be used to specify arguments to the function.
	o Edge color specification
	  o Added argument for controlling default positive edge color: posCol
      o Added argument for controlling default negative edge color: negCol
	  o Added argument for controlling default unweigted edge color: unCol
   	  o Custom colors now fade to the background color if fade=TRUE.
      o Edge colors can now be overwritten for specific edges. If edge.color is a vector, NA indicate the edge color is determined by default
    o Defaults added. The options "qgraph" can be assigned a list with default arguments for qgraph().
    o qgraph plots are now normalized across different sizes of the plots if the argument 'normalize' is set to TRUE (the default). Many arguments are normalized to the diagonal of the plot region so that the same result is obtained 
	
  o NEW MINOR FEATURES: