@@ -2,12 +2,12 @@ Package: qgraph
 Type: Package
 Title: Network representations of relationships in data
 Version: 1.2.1
-Date: 2013-01-29
+Date: 2013-01-30
 Author: Sacha Epskamp, Angelique O. J. Cramer, Lourens J. Waldorp, Verena D. Schmittmann and Denny Borsboom
 Maintainer: Sacha Epskamp <qgraph@sachaepskamp.com>
 Depends: R (>= 2.15.0)
 Suggests: RSVGTipsDevice, fdrtool, lavaan, sem, rpanel
-Imports:  psych, ellipse, lavaan, sem, plyr, methods, Hmisc, igraph, ReadImages, png
+Imports:  psych, ellipse, lavaan, sem, plyr, methods, Hmisc, igraph, jpeg, png
 ByteCompile: yes
 Description:  The qgraph package can be used to visualize data as networks.
 URL: http://sachaepskamp.com/qgraph
