@@ -25,7 +25,7 @@ importFrom(stats,"factanal")
 importFrom(ellipse,"ellipse")
 importFrom(graphics,"plot","points","lines","polygon")
 importFrom(png,"readPNG")
-importFrom(ReadImages,"read.jpeg")
+importFrom(jpeg,"readJPEG")
 import(plyr)
 importFrom(Hmisc,"subplot")
 import(igraph)
