@@ -2,7 +2,8 @@ Changes in Version 1.2.1
   o Curved edges can now be displayed as mostly straigth edges what run parallel. This can be done using the new argument 'curvePivot'. See documentation of 'qgraph' for more information.
   o Shape of curved edges can now be controlled with 'curveShape' and 'curvePivotShape'.
   o The start of edges is now also reset to the edge of nodes if the destination of the edge is also reset. This will cause that bidirectional edges now look the same as directed edges.
-  o Fixed a bug where graphs with a single edge were unable to pot edge labels.
+  o Fixed a bug where graphs with a single edge were unable to plot edge labels.
+  o jpeg package is now used to read jpeg files.
 
 
 Changes in Version 1.2
